# PixelChess

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Constants.h  Game.cpp  Game.h  Input.cpp  Piece.h  README.md  Renderer.cpp  Renderer.h  clean.py  input.h  main.cpp  template.xml
